--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 	<h1>Hello Travel</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+	<ul>
+		<li>red</li>
+		<li>yellow</li>
+		<li>green</li>
+		<li>black</li>
+	</ul>
 
 </body>
 </html>
